kubernetes/monitoring/graphana-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        volumeMounts:
        - name: grafana-data
          mountDir: /var/lib/grafana
      volumes:
      - name: grafana-data
        emptyDir: {}
