kubernetes/monitoring/alert-manager-service.yml
kind: Service
apiVersion: v1
metadata:
  name: alert-manager-service
  namespace: monitoring
spec:
  selector:
    app: alert-manager
  type: ClusterIP
  ports:
  - port:  9093
    targetPort:  9093
