kubernetes/monitoring/cadvisor-service.yml
kind: Service
apiVersion: v1
metadata:
  name: cadvisor-service
  namespace: monitoring
spec:
  selector:
    app: cadvisor
  type: ClusterIP
  ports:
  - port:  8080
    targetPort:  8080
