kubernetes/monitoring/grafana-service.yml
kind: Service
apiVersion: v1
metadata:
  name: grafana-service
  namespace: monitoring
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
  - port:  3000
    targetPort:  3000
